--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.3.3",
+    "@clerk/nextjs": "^5.7.5",
     "@clerk/types": "^4.14.0",
     "@headlessui/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
@@ -34,10 +34,10 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.428.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.6",
+    "next": "^15.1.4",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-parallax-tilt": "^1.7.237",
     "react-use": "^17.5.1",
@@ -51,8 +51,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
